--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -32,10 +32,10 @@ MathJax.Hub.Queue(function() {
 </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
 
-When we started talking about this project with [Matthias](https://www.linkedin.com/in/matthias-cremieux-4b1222153/) and then [Arthur](https://www.linkedin.com/in/arthur-verrez/), we knew that both building a Lego motorized car, and learning to drive with real-life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We also wanted to try another approach: Imitation Learning. We recently acquired a [Raspberry Pi 4b](https://www.raspberrypi.org/products/raspberry-pi-4-model-b/) and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars and used 2 methods of learning :
+When we started talking about this project with [Matthias](https://www.linkedin.com/in/matthias-cremieux-4b1222153/) and then [Arthur](https://www.linkedin.com/in/arthur-verrez/), we knew that both building a Lego motorized car, and learning to drive with real-life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We also wanted to try another approach: Imitation Learning. We recently acquired a [Raspberry Pi 4b](https://www.raspberrypi.org/products/raspberry-pi-4-model-b/) and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 vehicles and used 2 methods of learning :
 
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
-* a much better looking car, driving with an Imitation Learning algorithm
+* a much better-looking car, driving with an Imitation Learning algorithm
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.jpeg">
@@ -64,7 +64,7 @@ The first one drove on an inside track built in my home, while the second drove 
 
 ## Assembling the car
 
-The first step of building a lego car is building its structure and deciding the location of each component in the car to make it as compact as possible. We started by building each block and then assembled them. It resulted in a working car, but not in the fastest nor best looking one.
+The first step of building a lego car is building its structure and deciding the location of each component in the car to make it as compact as possible. We started by building each block and then assembled them. It resulted in a working car, but not in the fastest nor best-looking one.
 
 ### The structure
 
@@ -81,7 +81,7 @@ From top left to bottom right : Lego Mindstorm cables, RaspberyPi 4b + BrickPi, 
 </center>
 <br/>
 
-We chose to separate the car's electronic system in two halves: one half is the core of the car and will be linked to the motors, powering them, and will take care of the DRL part of the project. The second half is here to cool the first part, as all the operations listed above are energy-consuming. 
+We chose to separate the car's electronic system in two halves: one half is the core of the vehicle and will be linked to the motors, powering them, and will take care of the DRL part of the project. The second half is here to cool the first part, as all the operations listed above are energy-consuming. 
 
 The core part consists of a Raspberry Pi 4b (we chose this device to be the center of all the operations because of its vast specifications compared to the Raspberry Pi 3b) and a card from [Dexter Industries](https://www.dexterindustries.com/) that manages the link with the lego technics. In contrast, the second part consists of a battery powering a Raspberry Pi 3 that powers a small fan, installed in between the two cards of the car's core. While using a Raspberry Pi 3 to power a fan seems a bit of an overkill; it also allows us convenient flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheating.
 
@@ -212,7 +212,7 @@ Chassis of the PI-Mobile V2, with the 2 motors and the Raspberry Pi/BrickPi in t
 
 ## The track 
 
-We wanted to be a bit more ambitious and step aside from the small inside track we used for the first car. We used a small pathway around my home as a circuit. This pathway lies inside a large garden, making it easy to define where the car should drive and make a loop: precisely what we needed.
+We wanted to be a bit more ambitious and step aside from the small inside track we used for the first car. We used a short pathway around my home as a circuit. This pathway lies inside a large garden, making it easy to define where the vehicle should drive and make a loop: precisely what we needed.
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-2.png">
@@ -241,7 +241,7 @@ Now that we have a new car and a new track, it is time to talk about the models 
 
 ### Imitation Learning
 
-Let $\mathcal{O}$ be the set of possible observations. In our case, it is the input from our camera. Let $\mathcal{A}$ the set of possible actions, here it could be turn left or right or go straightforward. Let's suppose we have a dataset $\mathcal{D}$ made of observation-action pairs $(o_i,a_i)$, collected from our driving, for example.
+Let $\mathcal{O}$ be the set of possible observations. In our case, it is the input from our camera. Let $\mathcal{A}$ the set of possible actions, here it could be turn left or right or go straight. Let's suppose we have a dataset $\mathcal{D}$ made of observation-action pairs $(o_i,a_i)$, collected from our driving, for example.
 
 The idea behind Imitation Learning is to learn a policy $\pi$ mapping observations to actions, $\pi _{\theta} : \mathcal{O} \rightarrow \mathcal{A}$. The policy would allow the car to know which actions to perform depending on the observation: the camera input, according to the driving we've done before.
 
@@ -268,7 +268,7 @@ We kept the same neural network base, with a MobileNetV2 pretrained on ImageNet:
 
 ### Dataset
 
-We drove the car for around 15 minutes on the track, gathering around 9000 frames with inputs and controls (the controls were added by hand afterwards, when 2 decisions were possible). We used 5000 frames for the training, 2000 for the validation and 2000 for testing. However, because of another steering issue, the car was naturally going to the left when we where inputing a forward command. Therefore, most of the driving consisted of inputing forward and right to make sure the right would stay on track. Because of this, only a few left inputs were issued, mostly for large turns. This can be seen below. We also splitted the dataset into smaller episode to make sure that the Raspberry stoping itself would not delete a file too large.
+We drove the car for around 15 minutes on the track, gathering around 9000 frames with inputs and controls (the controls were added by hand afterward when 2 decisions were possible). We used 5000 frames for the training, 2000 for the validation, and 2000 for testing. However, because of another steering issue, the car was naturally going to the left when we were inputting a forward command. Therefore, most of the driving consisted of inputting forward and right to make sure the right would stay on track. Because of this, only a few left inputs were issued, mostly for significant turns. This can be seen below. We also split the dataset into smaller episodes to make sure that the Raspberry stoping itself would not delete a file too large.
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/stats-IL.png">
@@ -284,9 +284,9 @@ We trained the model twice: once without data augmentation and once including it
 * Small rotation
 * Small height and width translations
 
-The model without data augmentation gave poor results, especially during our first test session where the time of day and weather were completely different. This emphasizes the fact that the training dataset must generalize to real world testing: different weather, different lighting, different road style. This data augmentations made the car going from a complete failure to an acceptable robot.
+The model without data augmentation gave poor results, especially during our first test session, where the time of day and weather were completely different. This emphasizes the fact that the training dataset must generalize to real-world testing: different weather, different lighting, different road style. This data augmentations made the car going from a complete failure to an acceptable robot.
 
-Overall, we should have made a better dataset, mainly making sure we had no steering issues. This made the testing difficult, forcing us to add an artificial left steering and to make the car starts with the proper same angle as in the dataset.
+Overall, we should have made a better dataset, mainly making sure we had no steering issues. This made the testing difficult, forcing us to add artificial left steering and to make the car starts with the same proper angle as in the dataset.
 
 ## Results
 
@@ -308,11 +308,10 @@ Self driving car V2, some outside modifications were made to make an easier acce
 
 # Conclusion : 
 
-Overall, it was an extremely fun project to do, and more importantly, did not require a lot of complex knowledge. The car can be built with Legos, the motor and the BrickPi from Dexter Industry is easy to use with Python, futhermore the Deep Learning algorithms we used can be found anywhere. It was actually really interesting to see how we could put every "tech brick" one after the other, and end up with a working self driving car. Granted, following a track and making a few turns is far away from the demanding needs of a real autonomous car, interacting with others, but the basics of driving can still be learned with simple components.
+Overall, it was an extremely fun project to do, and more importantly, did not require a lot of sophisticated knowledge. The car can be built with Legos, the motor, and the BrickPi from Dexter Industry is easy to use with Python. Furthermore, the Deep Learning algorithms we used can be found anywhere. It was actually exciting to see how we could put every "tech brick" one after the other, and end up with a working self-driving car. Granted, following a track and making a few turns is far away from the demanding needs of a real autonomous car, interacting with others, but the basics of driving can still be learned with simple components.
 
 # References :  
 
 1. [Learning to Drive in a day - Wayve](https://arxiv.org/pdf/1807.00412.pdf)
 2. [Urban Driving with Conditional Imitation Learning - Wayve](https://arxiv.org/pdf/1912.00177.pdf)
 3. [End-to-end Driving via Conditional Imitation Learning - Codevilla et al.](https://arxiv.org/pdf/1710.02410.pdf)
-
