--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -90,9 +90,9 @@ From top left to bottom right : Lego Mindstorm cables, RaspberyPi 4b + BrickPi, 
 </center>
 <br/>
 
-We chose to separate the car's electronic system in two halves: one half is the core of the vehicle and will be linked to the motors, powering them, and will take care of the DRL part of the project. The second half is here to cool the first part, as all the operations listed above are energy-consuming. 
+We chose to separate the car's electronic system in two halves: one half is the core of the vehicle and will be linked to the motors, powering them, and will take care of the DRL part of the project. The second half is down the first part, as all the operations listed above are energy-consuming. 
 
-The core part consists of a Raspberry Pi 4b (we chose this device to be the center of all the operations because of its vast specifications compared to the Raspberry Pi 3b) and a card from [Dexter Industries](https://www.dexterindustries.com/) that manages the link with the lego technics. In contrast, the second part consists of a battery powering a Raspberry Pi 3 that powers a small fan, installed in between the two cards of the car's core. While using a Raspberry Pi 3 to power a fan seems a bit of an overkill; it also allows us convenient flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheating.
+The core part consists of a Raspberry Pi 4b (we chose this device to be the center of all the operations because of its vast specifications compared to the Raspberry Pi 3b) and a card from [Dexter Industries](https://www.dexterindustries.com/) that manages the link with the lego technics. In contrast, the second part consists of a battery powering a Raspberry Pi 3 that powers a small fan, installed in between the two cards of the car's core. While using a Raspberry Pi 3 to power a fan seems a bit of an overkill; it also allows us convenient a flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheating.
 
 We then used a raspbian image, unaltered, with the convenient package [VNC Viewer](https://www.realvnc.com/fr/connect/download/viewer/), which allows us to access the raspbian of the PI via SSH protocol. From there, we can launch our script to make the car move.
 
@@ -221,7 +221,7 @@ Chassis of the PI-Mobile V2, with the 2 motors and the Raspberry Pi/BrickPi in t
 
 ## The track 
 
-We wanted to be a bit more ambitious and step aside from the small inside track we used for the first car. We used a short pathway around my home as a circuit. This pathway lies inside a large garden, making it easy to define where the vehicle should drive and make a loop: precisely what we needed.
+We wanted to be a bit more ambitious and step aside from the small inside track we used for the first car. We used a short pathway around the house as a circuit. This pathway lies inside a large garden, making it easy to define where the vehicle should drive and make a loop: precisely what we needed.
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-2.png">
@@ -288,12 +288,12 @@ We drove the car for around 15 minutes on the track, gathering around 9000 frame
 Distribution of the input and timestamp on the dataset</em>
 </center>
 
-We trained the model twice: once without data augmentation and once including it. The data augmentation consisted of adding some random modifications regarding:
+We trained the model twice: once without data augmentation and once by including it. The data augmentation consisted of adding some random modifications regarding:
 * Brightness
 * Small rotation
 * Small height and width translations
 
-The model without data augmentation gave poor results, especially during our first test session, where the time of day and weather were completely different. This emphasizes the fact that the training dataset must generalize to real-world testing: different weather, different lighting, different road style. This data augmentations made the car going from a complete failure to an acceptable robot.
+The model without data augmentation gave poor results, especially during our first test session, where the time of day and weather were completely different. This emphasizes the fact that the training dataset must generalize to real-world testing: different weather, different lighting and different road style. This data augmentations made the car going from a complete failure to an acceptable robot.
 
 Overall, we should have made a better dataset, mainly making sure we had no steering issues. This made the testing difficult, forcing us to add artificial left steering and to make the car starts with the same proper angle as in the dataset.
 
@@ -317,10 +317,11 @@ Self driving car V2, some outside modifications were made to make an easier acce
 
 # Conclusion : 
 
-Overall, it was an extremely fun project to do, and more importantly, did not require a lot of sophisticated knowledge. The car can be built with Legos, the motor, and the BrickPi from Dexter Industry is easy to use with Python. Furthermore, the Deep Learning algorithms we used can be found anywhere. It was actually exciting to see how we could put every "tech brick" one after the other, and end up with a working self-driving car. Granted, following a track and making a few turns is far away from the demanding needs of a real autonomous car, interacting with others, but the basics of driving can still be learned with simple components.
+Overall, it was an extremely fun project to do, and more importantly, did not require a lot of sophisticated knowledge. The car can be built with Legos, the motor, and the BrickPi from Dexter Industry is easy to use with Python. Furthermore, the Deep Learning algorithms we used can be found anywhere. It was actually exciting to see how we could put every "tech brick" one after another, and end up with a working self-driving car. Granted, following a track and making a few turns is far away from the demanding needs of a real autonomous car, interacting with others, but the basics of driving can still be learned with simple components.
 
 # References :  
 
 1. [Learning to Drive in a day - Wayve](https://arxiv.org/pdf/1807.00412.pdf)
 2. [Urban Driving with Conditional Imitation Learning - Wayve](https://arxiv.org/pdf/1912.00177.pdf)
 3. [End-to-end Driving via Conditional Imitation Learning - Codevilla et al.](https://arxiv.org/pdf/1710.02410.pdf)
+
