add video and better out-

--- a/blog/_posts/2020-08-20-Narya.md
+++ b/blog/_posts/2020-08-20-Narya.md
@@ -31,7 +31,7 @@ MathJax.Hub.Queue(function() {
 </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
 
-![](full-intro.png)
+![]({{ site.url }}/imgs/2020-08-20-Narya/full-intro.png)
 
 # Narya
 
@@ -79,16 +79,12 @@ print("Image shape: {}".format(image.shape))
 visualize(image=image)
 ```
 
-    Image shape: (1024, 1024, 3)
-
-
-
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_4_1.png)
 
 
 ## Tracking Soccer Players
 
-![](tracker_full.png)
+![]({{ site.url }}/imgs/2020-08-20-Narya/tracker_full.png)
 
 ### Players detections
 
@@ -113,12 +109,6 @@ import tensorflow as tf
 tracker_model = TrackerModel(pretrained=True, backbone='ssd_512_resnet50_v1_coco')
 ```
 
-    Using TensorFlow backend.
-
-
-    Segmentation Models: using `keras` framework.
-
-
 and load our pretrained weights: 
 
 **Note:** When a ```TrackerModel``` gets instanciate more than once, weights won't load succesfully. Make sure to restart the kernel in this case
@@ -138,9 +128,6 @@ checkpoints = tf.keras.utils.get_file(
 tracker_model.load_weights(checkpoints)
 ```
 
-    Succesfully loaded weights from /Users/paulgarnier/.keras/datasets/player_tracker.params
-
-
 You can now easily use this model to make predictions on any soccer related images. Let's try it on our example:
 
 
@@ -150,13 +137,12 @@ ax = viz.plot_bbox(cv2.resize(image,(512,512)), bbox[0], score[0], cid[0], class
 plt.show()
 ```
 
-
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_10_0.png)
 
 
 Now that we have players' coordinates (and the ball position), we need to be able to transform these coordinates into 2D coordinates. This means finding the homography between our input image, and a 2D representation of the field: 
 
-![](homography-estimation.png)
+![]({{ site.url }}/imgs/2020-08-20-Narya/homography-estimation.png)
 
 ### Homography Estimations
 
@@ -170,7 +156,7 @@ Each model is created with:
 
 It then creates a model and a preprocessing function:
 
-```python3
+```python
 class DeepHomoModel:
     """Class for Keras Models to predict the corners displacement from an image. These corners can then get used 
     to compute the homography.
@@ -202,7 +188,7 @@ class DeepHomoModel:
 
 Each model then has the same call function: 
 
-```python3
+```python
 def __call__(self, input_img):
 
     img = self.preprocessing(input_img)
@@ -233,10 +219,6 @@ deep_homo_model.load_weights(checkpoints)
 
 corners = deep_homo_model(image)
 ```
-
-    WARNING:tensorflow:No training configuration found in the save file, so the model was *not* compiled. Compile it manually.
-    Succesfully loaded weights from /Users/paulgarnier/.keras/datasets/deep_homo_model.h5
-
 
 Let's load a "template" image, a 2D view of the field. This is the image to which we will apply our predicted homography: 
 
@@ -291,7 +273,6 @@ visualize(image=image,warped_template=cv2.resize(pred_warp, (1024,1024)))
 
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_18_1.png)
 
-
 You can also merge the warped template with your example: 
 
 **Notes**: Usually, this homography is only used to compute the coordinates of each players.
@@ -303,7 +284,6 @@ from narya.utils.vizualization import merge_template
 test = merge_template(image/255.,cv2.resize(pred_warp, (1024,1024)))
 visualize(image = test)
 ```
-
 
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_20_0.png)
 
@@ -338,10 +318,6 @@ visualize(
         pr_mask=pr_mask[..., -1].squeeze(),
     )
 ```
-
-    Succesfully loaded weights from /Users/paulgarnier/.keras/datasets/keypoint_detector.h5
-
-
 
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_22_1.png)
 
@@ -399,21 +375,16 @@ visualize(
     )
 ```
 
-
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_26_0.png)
 
-
 and if we merge them: 
-
 
 ```python
 test = merge_template(image/255.,cv2.resize(pred_warp, (1024,1024)))
 visualize(image = test)
 ```
 
-
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_28_0.png)
-
 
 ### ReIdentification
 
@@ -438,17 +409,6 @@ print(x_1,x_2,y_1,y_2)
 resized_image = cv2.resize(image,(512,512))
 plt.imshow(resized_image[y_1:y_2,x_1:x_2])
 ```
-
-    71 85 208 252
-
-
-
-
-
-    <matplotlib.image.AxesImage at 0x187286290>
-
-
-
 
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_30_2.png)
 
@@ -476,19 +436,6 @@ reid_model.load_weights(checkpoints)
 player_img = resized_image[y_1:y_2,x_1:x_2]
 embedding = reid_model(player_img)
 ```
-
-    Succesfully loaded weights from /Users/paulgarnier/.keras/datasets/player_reid.pth
-
-
-
-```python
-embedding[0].shape
-```
-
-
-
-
-    (751,)
 
 In the next section, we will see how to use all of these models together to track players on a video.
 
@@ -526,12 +473,6 @@ from narya.utils.vizualization import visualize
 
 from narya.tracker.full_tracker import FootballTracker
 ```
-
-    Using TensorFlow backend.
-
-
-    Segmentation Models: using `keras` framework.
-
 
 First, we initialize a 2d Field template:
 
@@ -575,10 +516,6 @@ visualize(image_0=image_0,
             image_50=image_50)
 ```
 
-    Image shape: (512, 512, 3)
-
-
-
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_9_1.png)
 
 
@@ -586,7 +523,7 @@ visualize(image_0=image_0,
 
 We first need to create our tracker. This object gathers each and every one of our model: 
 
-```python3
+```python
 class FootballTracker:
 """Class for the full Football Tracker. Given a list of images, it allows to track and id each player as well as the ball.
 It also computes the homography at each given frame, and apply it to each player coordinates. 
@@ -705,10 +642,6 @@ visualize(image_0=image_0,
             image_50=image_50)
 ```
 
-    Image shape: (512, 512, 3)
-
-
-
 ![png]({{ site.url }}/imgs/2020-08-20-Narya/output_15_1.png)
 
 
@@ -728,22 +661,10 @@ with imageio.get_writer('test_outputs/movie.mp4', mode='I',fps=20) as writer:
     100% (51 of 51) |########################| Elapsed Time: 0:00:00 Time:  0:00:00
 
 
-
-```python
-%%HTML
 <div align="middle">
 <video width="80%" controls>
-      <source src="test_outputs/movie.mp4" type="video/mp4">
+      <source src="{{ site.url }}/imgs/2020-08-20-Narya/movie.mp4" type="video/mp4">
 </video></div>
-```
-
-
-<div align="middle">
-<video width="80%" controls>
-      <source src="test_outputs/movie.mp4" type="video/mp4">
-</video></div>
-
-
 
 ##  Process trajectories 
 
@@ -757,7 +678,7 @@ Fist, you can do several operations to ensure that the trajectories are good:
 
 These operation are easy to do with some of our functions from ```narya.utils.tracker```: 
 
-```python3
+```python
 def _remove_coords(traj, ids, frame):
     """Remove the x,y coordinates of an id at a given frame
     Arguments:
@@ -832,7 +753,7 @@ here, let's assume we don't have to perform any operations, and directly process
 
 First, we can save our raw trajectory with
 
-```python3
+```python
 import json
 
 with open('trajectories.json', 'w') as fp:
@@ -880,9 +801,6 @@ We now have access to a dataframe with for each id, for each frame, the 2D coord
 ```python
 df.head()
 ```
-
-
-
 
 <div>
 <style scoped>
@@ -1186,9 +1104,6 @@ df['bgcolor'] = df['bgcolor'].fillna('black')
 df.tail()
 ```
 
-
-
-
 <div>
 <style scoped>
     .dataframe tbody tr th:only-of-type {
@@ -1487,7 +1402,7 @@ Finally, we give here a quick tour of our training scripts.
 
 We start by creating a model: 
 
-```python3
+```python
 full_model = KeypointDetectorModel(
     backbone=opt.backbone, num_classes=29, input_shape=(320, 320),
 )
@@ -1498,7 +1413,7 @@ if opt.weights is not None:
 
 We then create a loss function and an optimizer:
 
-```python3
+```python
 # define optomizer
 optim = keras.optimizers.Adam(opt.lr)
 # define loss function
@@ -1525,7 +1440,7 @@ model.summary()
 
 We can easily build a Dataset and a Dataloader (handling batches):
 
-```python3
+```python
 x_train_dir = os.path.join(opt.data_dir, opt.x_train_dir)
 kp_train_dir = os.path.join(opt.data_dir, opt.y_train_dir)
 x_test_dir = os.path.join(opt.data_dir, opt.x_test_dir)
@@ -1545,7 +1460,7 @@ train_dataloader, valid_dataloader = full_dataset._get_dataloader()
 
 Finally, easily launch a training with:
 
-```python3
+```python
 model.fit_generator(
     train_dataloader,
     steps_per_epoch=len(train_dataloader),
